--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="left-side-menu">
           <div class="logo">
             <a href="#">
-              <img src="logo1.png" alt="logo" />
+              <img src="" alt="logo" />
             </a>
           </div>
 
